<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:id="@+id/background"
    android:background="@drawable/background_list"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"

        android:layout_marginBottom="24dp"
        android:autofillHints="false"
        android:background="@drawable/text_shape"
        android:focusable="false"

        android:focusableInTouchMode="false"
        android:inputType="none"
        android:maxLength="12"
        android:shadowColor="#1AC4FF"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="8"
        android:text="@string/result"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.9">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="clear"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/negative"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="negative"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:text="@string/negative"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />


            <Button
                android:id="@+id/back"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="back"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="divide"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="seven"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="eight"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="nine"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="multiply"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="four"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="five"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="six"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="subtract"
                android:text="@string/minus"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="one"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="two"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="three"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="add"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/decimal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="decimal"
                android:text="@string/decimal"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="zero"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

            <Button
                android:id="@+id/equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:onClick="equal"
                android:text="@string/equals"
                android:textColor="#FFFFFF"
                android:shadowColor="#1AC4FF"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="8"
                android:textSize="28sp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>